[package]
name = "noise"
description = "Procedural noise generation library."
homepage = "https://github.com/razaekel/noise-rs"
repository = "https://github.com/razaekel/noise-rs"
documentation = "https://docs.rs/noise/"
version = "0.5.1"
license = "Apache-2.0/MIT"
keywords = ["math", "random"]
authors = ["The Noise-rs Developers."]

[lib]
name = "noise"

[dependencies]
rand = "0.5"

[[bench]]
name = "benches"
